--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,5 +4,11 @@ version = ${?VERSION}
 hostname = "localhost"
 hostname = ${?HOSTNAME}
 
-databaseUrl = "jdbc:postgresql://db:5432/postgres?user=postgres&password=postgres"
-databaseUrl = ${?DB_URL}
+database {
+  driver = "org.postgresql.Driver"
+  url = "jdbc:postgresql://localhost:5432/postgres?user=postgres&password=postgres"
+  url = ${?DB_URL}
+  numThreads = 5
+  maximumPoolSize = 20
+  connectionPool = "HikariCP"
+}
