--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,8 @@ services:
     - ~/.sbt:/root/.sbt
     - ~/.ivy2:/root/.ivy2
     working_dir: /code
-    links:
-    - db:db
+    depends_on:
+    - db
     entrypoint: "sleep infinity"
     environment:
     - DB_URL=jdbc:postgresql://db:5432/postgres?user=postgres&password=postgres
@@ -19,6 +19,6 @@ services:
     environment:
     - POSTGRES_PASSWORD=postgres
     volumes:
-    - ./scripts/database.sql:/init/database.sql:ro
+    - ./scripts/database.sql:/docker-entrypoint-initdb.d/database.sql:ro
     ports:
     - "5432:5432"
