[feature] github initial implementation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,3 +12,9 @@ database {
   maximumPoolSize = 20
   connectionPool = "HikariCP"
 }
+
+github {
+  clientId: ${?GITHUB_CLIENT_ID}
+  clientSecret: ${?GITHUB_CLIENT_SECRET}
+  scopes: ["read:user", "gist"]
+}
