--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,3 +1,9 @@
 version = "TestVersion"
 hostname = "TestHostname"
 databaseUrl = "TestDbUrl"
+
+github {
+  clientId: "clientId"
+  clientSecret: "clientSecret"
+  scopes: ["read:user"]
+}
