add jwt service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,3 +18,18 @@ github {
   clientSecret: ${?GITHUB_CLIENT_SECRET}
   scopes: ["read:user", "gist"]
 }
+
+jwt {
+  expirationTime: "1d"
+  expirationTime: ${?JWT_EXPIRATION_TIME}
+  // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+  // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+  algorithm: "HS256"
+  algorithm: ${?JWT_ALGORITHM}
+  secret: "secret"
+  secret: ${?JWT_SECRET}
+  privateKey: ""
+  privateKey: ${?JWT_PRIVATE_KEY}
+  publicKey: ""
+  publicKey: ${?JWT_PUBLIC_KEY}
+}
