--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -7,3 +7,11 @@ github {
   clientSecret: "clientSecret"
   scopes: ["read:user"]
 }
+
+jwt {
+  expirationTime: "1d"
+  algorithm: "HS256"
+  secret: "secret"
+  privateKey: "private"
+  publicKey: "public"
+}
