[feature] oauth2 providers google, fb, github

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,9 @@ version = ${?VERSION}
 hostname = "localhost"
 hostname = ${?HOSTNAME}
 
+rootUrl = "https://lvh.me:9443"
+rootUrl = ${?ROOT_URL}
+
 database {
   driver = "org.postgresql.Driver"
   url = "jdbc:postgresql://localhost:5432/postgres?user=postgres&password=postgres"
@@ -11,12 +14,6 @@ database {
   numThreads = 5
   maximumPoolSize = 20
   connectionPool = "HikariCP"
-}
-
-github {
-  clientId: ${?GITHUB_CLIENT_ID}
-  clientSecret: ${?GITHUB_CLIENT_SECRET}
-  scopes: ["read:user", "gist"]
 }
 
 jwt {
@@ -36,4 +33,22 @@ jwt {
 
 auth {
   callbackUrl: "https://localhost/login?token=<<TOKEN>>"
+}
+
+facebook {
+  clientId: ${?FACEBOOK_CLIENT_ID}
+  clientSecret: ${?FACEBOOK_CLIENT_SECRET}
+  scopes: ["public_profile"]
+}
+
+github {
+  clientId: ${?GITHUB_CLIENT_ID}
+  clientSecret: ${?GITHUB_CLIENT_SECRET}
+  scopes: ["read:user", "gist"]
+}
+
+google {
+  clientId: ${?GOOGLE_CLIENT_ID}
+  clientSecret: ${?GOOGLE_CLIENT_SECRET}
+  scopes: ["openid", "email", "profile"]
 }
