--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -52,3 +52,18 @@ google {
   clientSecret: ${?GOOGLE_CLIENT_SECRET}
   scopes: ["openid", "email", "profile"]
 }
+
+ldap {
+  url = "ldap://localhost:389"
+  url = ${?LDAP_URL}
+  readonlyUserWithNamespace = "cn=readonly,dc=wanari,dc=com"
+  readonlyUserWithNamespace = ${?LDAP_READONLY_USER_WITH_NAMESPACE}
+  readonlyUserPassword = "readonly"
+  readonlyUserPassword = ${?LDAP_READONLY_USER_PASSWORD}
+  userSearchBaseDomain = "dc=wanari,dc=com"
+  userSearchBaseDomain = ${?LDAP_USER_SEARCH_BASE_DOMAIN}
+  userSearchAttribute = "cn"
+  userSearchAttribute = ${?LDAP_USER_SEARCH_ATTRIBUTE}
+  userSearchReturnAttributes = "cn,sn,givenName"
+  userSearchReturnAttributes = ${?LDAP_USER_SEARCH_RETURN_ATTRIBUTES}
+}
