--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -19,3 +19,12 @@ jwt {
 auth {
   callbackUrl: "url?t=<<TOKEN>>"
 }
+
+ldap {
+  url = "ldap://1.2.3.4:389"
+  readonlyUserWithNamespace = "cn=readonly,dc=example,dc=com"
+  readonlyUserPassword = "readonlypw"
+  userSearchBaseDomain = "ou=peaple,dc=example,dc=com"
+  userSearchAttribute = "cn"
+  userSearchReturnAttributes = "cn,sn,email"
+}
