add debug html page

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,7 +32,7 @@ jwt {
 }
 
 auth {
-  callbackUrl: "https://localhost/login?token=<<TOKEN>>"
+  callbackUrl: "https://localhost:9443/index.html?token=<<TOKEN>>"
 }
 
 facebook {
