--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -40,6 +40,7 @@ services:
     - ./scripts/nginx/proxy.conf:/etc/nginx/conf.d/default.conf
     - ./scripts/nginx/cert.key:/etc/nginx/ssl/cert.key
     - ./scripts/nginx/cert.pem:/etc/nginx/ssl/cert.pem
+    - ./scripts/nginx/index.html:/var/www/index.html
     depends_on:
       - backend
     ports:
