--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -13,4 +13,9 @@ server {
     proxy_set_header    X-Real-IP $remote_addr;
     proxy_set_header    X-HTTPS   'True';
   }
+
+  location = / {
+    index index.html;
+    root /var/www;
+  }
 }
