[refactor] files reorganized

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,22 +35,26 @@ auth {
   callbackUrl: "https://localhost:9443/index.html?token=<<TOKEN>>"
 }
 
-facebook {
-  clientId: ${?FACEBOOK_CLIENT_ID}
-  clientSecret: ${?FACEBOOK_CLIENT_SECRET}
-  scopes: ["public_profile"]
-}
+oauth2 {
 
-github {
-  clientId: ${?GITHUB_CLIENT_ID}
-  clientSecret: ${?GITHUB_CLIENT_SECRET}
-  scopes: ["read:user", "gist"]
-}
+  facebook {
+    clientId: ${?FACEBOOK_CLIENT_ID}
+    clientSecret: ${?FACEBOOK_CLIENT_SECRET}
+    scopes: ["public_profile"]
+  }
 
-google {
-  clientId: ${?GOOGLE_CLIENT_ID}
-  clientSecret: ${?GOOGLE_CLIENT_SECRET}
-  scopes: ["openid", "email", "profile"]
+  github {
+    clientId: ${?GITHUB_CLIENT_ID}
+    clientSecret: ${?GITHUB_CLIENT_SECRET}
+    scopes: ["read:user", "gist"]
+  }
+
+  google {
+    clientId: ${?GOOGLE_CLIENT_ID}
+    clientSecret: ${?GOOGLE_CLIENT_SECRET}
+    scopes: ["openid", "email", "profile"]
+  }
+
 }
 
 ldap {
