[refactor] better config handling

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -40,19 +40,19 @@ oauth2 {
   facebook {
     clientId: ${?FACEBOOK_CLIENT_ID}
     clientSecret: ${?FACEBOOK_CLIENT_SECRET}
-    scopes: ["public_profile"]
+    scopes: "public_profile"
   }
 
   github {
     clientId: ${?GITHUB_CLIENT_ID}
     clientSecret: ${?GITHUB_CLIENT_SECRET}
-    scopes: ["read:user", "gist"]
+    scopes: "read:user,gist"
   }
 
   google {
     clientId: ${?GOOGLE_CLIENT_ID}
     clientSecret: ${?GOOGLE_CLIENT_SECRET}
-    scopes: ["openid", "email", "profile"]
+    scopes: "openid,email,profile"
   }
 
 }
