--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,10 +2,26 @@ version = "TestVersion"
 hostname = "TestHostname"
 databaseUrl = "TestDbUrl"
 
-github {
-  clientId: "clientId"
-  clientSecret: "clientSecret"
-  scopes: ["read:user"]
+rootUrl = "https://lvh.me:9443"
+
+oauth2 {
+  github {
+    clientId: "clientId"
+    clientSecret: "clientSecret"
+    scopes: "read:user"
+  }
+
+  google {
+    clientId: "clientId"
+    clientSecret: "clientSecret"
+    scopes: "openid,email,profile"
+  }
+
+  facebook {
+    clientId: "clientId"
+    clientSecret: "clientSecret"
+    scopes: "public_profile"
+  }
 }
 
 jwt {
