add hook service without wiring

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -44,3 +44,14 @@ ldap {
   userSearchAttribute = "cn"
   userSearchReturnAttributes = "cn,sn,email"
 }
+
+hook {
+  baseUrl = "https://backend/hook"
+
+  authType = "basic"
+
+  basicAuth {
+    username = "user"
+    password = "pass"
+  }
+}
