--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -71,3 +71,20 @@ ldap {
   userSearchReturnAttributes = "cn,sn,givenName"
   userSearchReturnAttributes = ${?LDAP_USER_SEARCH_RETURN_ATTRIBUTES}
 }
+
+hook {
+  // empty == hook module off
+  baseUrl = ""
+  baseUrl = ${?HOOK_BASE_PATH}
+
+  // basic
+  authType = "basic"
+  authType = ${?HOOK_AUTH_TYPE}
+
+  basicAuth {
+    username = ""
+    username = ${?HOOK_BASIC_USERNAME}
+    password = ""
+    password = ${?HOOK_BASIC_PASSWORD}
+  }
+}
