add ldap array attributes

--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -14,7 +14,7 @@ server {
     proxy_set_header    X-HTTPS   'True';
   }
 
-  location = / {
+  location = /index.html {
     index index.html;
     root /var/www;
   }
