--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -43,6 +43,7 @@ ldap {
   userSearchBaseDomain = "ou=peaple,dc=example,dc=com"
   userSearchAttribute = "cn"
   userSearchReturnAttributes = "cn,sn,email"
+  userSearchReturnArrayAttributes = "memberof"
 }
 
 hook {
