--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -64,12 +64,14 @@ ldap {
   readonlyUserWithNamespace = ${?LDAP_READONLY_USER_WITH_NAMESPACE}
   readonlyUserPassword = "readonly"
   readonlyUserPassword = ${?LDAP_READONLY_USER_PASSWORD}
-  userSearchBaseDomain = "dc=wanari,dc=com"
+  userSearchBaseDomain = "ou=users,dc=wanari,dc=com"
   userSearchBaseDomain = ${?LDAP_USER_SEARCH_BASE_DOMAIN}
   userSearchAttribute = "cn"
   userSearchAttribute = ${?LDAP_USER_SEARCH_ATTRIBUTE}
   userSearchReturnAttributes = "cn,sn,givenName"
   userSearchReturnAttributes = ${?LDAP_USER_SEARCH_RETURN_ATTRIBUTES}
+  userSearchReturnArrayAttributes = "memberof"
+  userSearchReturnArrayAttributes = ${?LDAP_USER_SEARCH_RETURN_ARRAY_ATTRIBUTES}
 }
 
 hook {
