provider api refactor

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -31,8 +31,9 @@ jwt {
   publicKey: ${?JWT_PUBLIC_KEY}
 }
 
-auth {
-  callbackUrl: "https://localhost:9443/index.html?token=<<TOKEN>>"
+callback {
+  success: "https://lvh.me:9443/index.html?token=<<TOKEN>>"
+  accessDenied: "https://lvh.me:9443/index.html?access_denied"
 }
 
 oauth2 {
