--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -32,8 +32,9 @@ jwt {
   publicKey: "public"
 }
 
-auth {
-  callbackUrl: "url?t=<<TOKEN>>"
+callback {
+  success: "url?t=<<TOKEN>>"
+  accessDenied: "accessDeniedUrl"
 }
 
 ldap {
