[refactor] split config to support runtime configuration in the future

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,8 +4,11 @@ version = ${?VERSION}
 hostname = "localhost"
 hostname = ${?HOSTNAME}
 
-rootUrl = "https://lvh.me:9443"
-rootUrl = ${?ROOT_URL}
+configType = "conf"
+
+conf {
+  file = "runtime.conf"
+}
 
 database {
   driver = "org.postgresql.Driver"
@@ -14,80 +17,4 @@ database {
   numThreads = 5
   maximumPoolSize = 20
   connectionPool = "HikariCP"
-}
-
-jwt {
-  expirationTime: "1d"
-  expirationTime: ${?JWT_EXPIRATION_TIME}
-  // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
-  // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
-  algorithm: "HS256"
-  algorithm: ${?JWT_ALGORITHM}
-  secret: "secret"
-  secret: ${?JWT_SECRET}
-  privateKey: ""
-  privateKey: ${?JWT_PRIVATE_KEY}
-  publicKey: ""
-  publicKey: ${?JWT_PUBLIC_KEY}
-}
-
-callback {
-  success: "https://lvh.me:9443/index.html?token=<<TOKEN>>"
-  accessDenied: "https://lvh.me:9443/index.html?access_denied"
-}
-
-oauth2 {
-
-  facebook {
-    clientId: ${?FACEBOOK_CLIENT_ID}
-    clientSecret: ${?FACEBOOK_CLIENT_SECRET}
-    scopes: "public_profile"
-  }
-
-  github {
-    clientId: ${?GITHUB_CLIENT_ID}
-    clientSecret: ${?GITHUB_CLIENT_SECRET}
-    scopes: "read:user,gist"
-  }
-
-  google {
-    clientId: ${?GOOGLE_CLIENT_ID}
-    clientSecret: ${?GOOGLE_CLIENT_SECRET}
-    scopes: "openid,email,profile"
-  }
-
-}
-
-ldap {
-  url = "ldap://localhost:389"
-  url = ${?LDAP_URL}
-  readonlyUserWithNamespace = "cn=readonly,dc=wanari,dc=com"
-  readonlyUserWithNamespace = ${?LDAP_READONLY_USER_WITH_NAMESPACE}
-  readonlyUserPassword = "readonly"
-  readonlyUserPassword = ${?LDAP_READONLY_USER_PASSWORD}
-  userSearchBaseDomain = "ou=users,dc=wanari,dc=com"
-  userSearchBaseDomain = ${?LDAP_USER_SEARCH_BASE_DOMAIN}
-  userSearchAttribute = "cn"
-  userSearchAttribute = ${?LDAP_USER_SEARCH_ATTRIBUTE}
-  userSearchReturnAttributes = "cn,sn,givenName"
-  userSearchReturnAttributes = ${?LDAP_USER_SEARCH_RETURN_ATTRIBUTES}
-  userSearchReturnArrayAttributes = "memberof"
-  userSearchReturnArrayAttributes = ${?LDAP_USER_SEARCH_RETURN_ARRAY_ATTRIBUTES}
-}
-
-hook {
-  // empty == hook module off
-  baseUrl = ""
-  baseUrl = ${?HOOK_BASE_PATH}
-
-  // basic
-  authType = "basic"
-  authType = ${?HOOK_AUTH_TYPE}
-
-  basicAuth {
-    username = ""
-    username = ${?HOOK_BASIC_USERNAME}
-    password = ""
-    password = ${?HOOK_BASIC_PASSWORD}
-  }
 }
