--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,59 +1,8 @@
 version = "TestVersion"
 hostname = "TestHostname"
-databaseUrl = "TestDbUrl"
 
-rootUrl = "https://lvh.me:9443"
+configType = "conf"
 
-oauth2 {
-  github {
-    clientId: "clientId"
-    clientSecret: "clientSecret"
-    scopes: "read:user"
-  }
-
-  google {
-    clientId: "clientId"
-    clientSecret: "clientSecret"
-    scopes: "openid,email,profile"
-  }
-
-  facebook {
-    clientId: "clientId"
-    clientSecret: "clientSecret"
-    scopes: "public_profile"
-  }
-}
-
-jwt {
-  expirationTime: "1d"
-  algorithm: "HS256"
-  secret: "secret"
-  privateKey: "private"
-  publicKey: "public"
-}
-
-callback {
-  success: "url?t=<<TOKEN>>"
-  accessDenied: "accessDeniedUrl"
-}
-
-ldap {
-  url = "ldap://1.2.3.4:389"
-  readonlyUserWithNamespace = "cn=readonly,dc=example,dc=com"
-  readonlyUserPassword = "readonlypw"
-  userSearchBaseDomain = "ou=peaple,dc=example,dc=com"
-  userSearchAttribute = "cn"
-  userSearchReturnAttributes = "cn,sn,email"
-  userSearchReturnArrayAttributes = "memberof"
-}
-
-hook {
-  baseUrl = "https://backend/hook"
-
-  authType = "basic"
-
-  basicAuth {
-    username = "user"
-    password = "pass"
-  }
+conf {
+  file = "runtime.conf"
 }
