[refactor] error response

--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -18,7 +18,7 @@ jwt {
 
 callback {
   success: "https://lvh.me:9443/index.html?token=<<TOKEN>>"
-  accessDenied: "https://lvh.me:9443/index.html?access_denied"
+  failure: "https://lvh.me:9443/index.html?error=<<ERROR>>"
 }
 
 oauth2 {
