--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -15,6 +15,7 @@ server {
   }
 
   location = /index.html {
+    add_header Cache-Control no-cache;
     index index.html;
     root /var/www;
   }
