--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -76,3 +76,14 @@ hook {
     password = ${?HOOK_BASIC_PASSWORD}
   }
 }
+
+email {
+  serviceUrl: "http://localhost:9010"
+  serviceUrl:  ${?EMAIL_SERVICE_URL}
+  serviceUsername: ""
+  serviceUsername: ${?EMAIL_SERVICE_USERNAME}
+  servicePassword: "super_secret_123"
+  servicePassword: ${?EMAIL_SERVICE_PASSWORD}
+  registerUrl: "https://lvh.me:9443/index.html?registerToken=<<TOKEN>>"
+  registerUrl: ${?EMAIL_REGISTER_URL}
+}
