add email reset password

--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -86,4 +86,6 @@ email {
   servicePassword: ${?EMAIL_SERVICE_PASSWORD}
   registerUrl: "https://lvh.me:9443/index.html?registerToken=<<TOKEN>>"
   registerUrl: ${?EMAIL_REGISTER_URL}
+  resetPasswordUrl: "https://lvh.me:9443/index.html?resetPasswordToken=<<TOKEN>>"
+  resetPasswordUrl: ${?EMAIL_RESET_PASSWORD_URL}
 }
