--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -8,7 +8,7 @@ server {
   ssl_certificate_key        ssl/cert.key;
 
   location / {
-    proxy_pass          http://backend:9000;
+    proxy_pass          http://localhost:9000;
     proxy_set_header    Host      $host;
     proxy_set_header    X-Real-IP $remote_addr;
     proxy_set_header    X-HTTPS   'True';
