[feature] added TOTP as a u/p provider

--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -89,3 +89,11 @@ email {
   resetPasswordUrl: "https://lvh.me:9443/index.html?resetPasswordToken=<<TOKEN>>"
   resetPasswordUrl: ${?EMAIL_RESET_PASSWORD_URL}
 }
+
+totp {
+  algorithm: "SHA1" //MD5, SHA1, SHA256, SHA512
+  window: 1
+  period: 30s
+  digits: 6
+  startFromCurrentTime: false
+}
