add modules enable/disable feature

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,3 +18,7 @@ database {
   maximumPoolSize = 20
   connectionPool = "HikariCP"
 }
+
+// basic, email, ldap, github, google, facebook, totp
+modulesEnabled = "basic,email,ldap,github,google,facebook,totp"
+modulesEnabled = ${?MODULES_ENABLED}
