--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -6,3 +6,6 @@ configType = "conf"
 conf {
   file = "runtime.conf"
 }
+
+// basic, email, ldap, github, google, facebook, totp
+modulesEnabled = "testModule1, testModule2,,testModule3"
