--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -97,3 +97,9 @@ totp {
   digits: 6
   startFromCurrentTime: false
 }
+
+passwordDifficulty {
+  // Min 8 characters, at least one uppercase one lowercase letter and one number
+  pattern: "^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)[a-zA-Z\\d]{8,}$"
+  pattern: ${?PASSWORD_PATTERN}
+}
