[feature] selectable database service

--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -100,6 +100,12 @@ totp {
 
 passwordDifficulty {
   // Min 8 characters, at least one uppercase one lowercase letter and one number
-  pattern: "^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)[a-zA-Z\\d]{8,}$"
+  pattern: "^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).{8,}$"
   pattern: ${?PASSWORD_PATTERN}
+}
+
+database {
+  // memory, postgres
+  type: "memory"
+  type: ${?DATABASE_TYPE}
 }
