create healthcheck optional module

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -10,4 +10,4 @@ hook {
   baseUrl = ""
 }
 
-modulesEnabled = "basic,email,ldap,github,google,facebook,totp"
+modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
