--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,6 +16,7 @@ database {
   connectionPool = "HikariCP"
 }
 
-// basic, email, ldap, github, google, facebook, totp
-modulesEnabled = "basic,email,ldap,github,google,facebook,totp"
+// core modules: health
+// auth modules: basic, email, ldap, github, google, facebook, totp
+modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
 modulesEnabled = ${?MODULES_ENABLED}
