add tracer first impl

--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -20,3 +20,12 @@ server {
     root /var/www;
   }
 }
+
+server {
+  listen      8080;
+  server_name jaeger.lvh.me;
+
+  location / {
+    proxy_pass http://localhost:16686;
+  }
+}
