--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,6 +16,13 @@ database {
   connectionPool = "HikariCP"
 }
 
+mongo {
+  uri = "mongodb://localhost/tutelar"
+  uri = ${?DB_URI}
+  collection = "users"
+  collection = ${?DB_COLLECTION}
+}
+
 // core modules: health
 // auth modules: basic, email, ldap, github, google, facebook, totp
 modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
