--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -101,7 +101,7 @@ passwordDifficulty {
 }
 
 database {
-  // memory, postgres
+  // memory, postgres, mongo
   type: "memory"
   type: ${?DATABASE_TYPE}
 }
