--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -8,3 +8,8 @@ conf {
 
 // basic, email, ldap, github, google, facebook, totp
 modulesEnabled = "testModule1, testModule2,,testModule3"
+
+mongo {
+  uri = "URI"
+  collection = "COLLECTION"
+}
