small proxy improvement

--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -29,3 +29,12 @@ server {
     proxy_pass http://localhost:16686;
   }
 }
+
+server {
+  listen      8080;
+  server_name mailhog.lvh.me;
+
+  location / {
+    proxy_pass http://localhost:8025;
+  }
+}
