config akka logger

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -27,3 +27,9 @@ mongo {
 // auth modules: basic, email, ldap, github, google, facebook, totp
 modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
 modulesEnabled = ${?MODULES_ENABLED}
+
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
