--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -77,7 +77,7 @@ hook {
   }
 }
 
-email {
+email-http {
   serviceUrl: "http://localhost:9010"
   serviceUrl:  ${?EMAIL_SERVICE_URL}
   serviceUsername: ""
