add rabbitmq service

--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -38,3 +38,12 @@ server {
     proxy_pass http://localhost:8025;
   }
 }
+
+server {
+  listen      8080;
+  server_name rabbitmq.lvh.me;
+
+  location / {
+    proxy_pass http://localhost:15672;
+  }
+}
