--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -86,6 +86,10 @@ email-http {
   servicePassword: ${?EMAIL_SERVICE_PASSWORD}
 }
 
+email-rabbit-mq {
+  queue: "tutelar_email"
+}
+
 totp {
   algorithm: "SHA1" //MD5, SHA1, SHA256, SHA512
   window: 1
