--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -64,4 +64,9 @@ services:
     - 16686:16686
     - 14268:14268
     - 9411:9411
-
+  rabbitmq:
+    image: rabbitmq:3.7.14-management
+    hostname: "rabbitmq"
+    ports:
+    - 5672:5672
+    - 15672:15672
