--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,26 +1,70 @@
-hostname = "localhost"
-hostname = ${?HOSTNAME}
-
-configType = "conf"
-
 conf {
+  configType = "conf"
   file = "runtime.conf"
 }
 
+// core modules: health, rabbitmq
+// auth modules: basic, email, ldap, github, google, facebook, totp
+modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
+modulesEnabled = ${?MODULES_ENABLED}
+
 database {
-  driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql://localhost:5432/postgres?user=postgres&password=postgres"
-  url = ${?DB_URL}
-  numThreads = 5
-  maximumPoolSize = 20
-  connectionPool = "HikariCP"
+  // memory, postgres, mongo
+  type = "memory"
+  type = ${?DATABASE_TYPE}
+
+  postgres {
+    driver = "org.postgresql.Driver"
+    url = "jdbc:postgresql://localhost:5432/postgres?user=postgres&password=postgres"
+    url = ${?DB_URL}
+    numThreads = 5
+    maximumPoolSize = 20
+    connectionPool = "HikariCP"
+  }
+
+  mongo {
+    uri = "mongodb://localhost/tutelar"
+    uri = ${?DB_URI}
+    collection = "users"
+    collection = ${?DB_COLLECTION}
+  }
 }
 
-mongo {
-  uri = "mongodb://localhost/tutelar"
-  uri = ${?DB_URI}
-  collection = "users"
-  collection = ${?DB_COLLECTION}
+jwt {
+  expirationTime = "1d"
+  expirationTime = ${?JWT_EXPIRATION_TIME}
+  // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+  // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+  algorithm = "HS256"
+  algorithm = ${?JWT_ALGORITHM}
+  secret = "secret"
+  secret = ${?JWT_SECRET}
+  privateKey = ""
+  privateKey = ${?JWT_PRIVATE_KEY}
+  publicKey = ""
+  publicKey = ${?JWT_PUBLIC_KEY}
+}
+
+callback {
+  success = "https://lvh.me:9443/index.html?token=<<TOKEN>>"
+  failure = "https://lvh.me:9443/index.html?error=<<ERROR>>"
+}
+
+hook {
+  // empty == hook module off
+  baseUrl = ""
+  baseUrl = ${?HOOK_BASE_PATH}
+
+  // basic
+  authType = "basic"
+  authType = ${?HOOK_AUTH_TYPE}
+
+  basicAuth {
+    username = ""
+    username = ${?HOOK_BASIC_USERNAME}
+    password = ""
+    password = ${?HOOK_BASIC_PASSWORD}
+  }
 }
 
 op-rabbit {
@@ -58,10 +102,11 @@ op-rabbit {
   }
 }
 
-// core modules: health, rabbitmq
-// auth modules: basic, email, ldap, github, google, facebook, totp
-modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
-modulesEnabled = ${?MODULES_ENABLED}
+tracer {
+  // off, jaeger
+  client = "jaeger"
+  client = ${?TRACER_CLIENT}
+}
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
