--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,15 +1,44 @@
-hostname = "TestHostname"
-
-configType = "conf"
-
 conf {
+  configType = "conf"
   file = "runtime.conf"
 }
 
 // basic, email, ldap, github, google, facebook, totp
 modulesEnabled = "testModule1, testModule2,,testModule3"
 
-mongo {
-  uri = "URI"
-  collection = "COLLECTION"
+database {
+  type = "DBTYPE"
+
+  mongo {
+    uri = "URI"
+    collection = "COLLECTION"
+  }
+}
+
+jwt {
+  expirationTime = "1d"
+  algorithm = "HS256"
+  secret = "secret"
+  privateKey = "private"
+  publicKey = "public"
+}
+
+callback {
+  success = "url?t=<<TOKEN>>"
+  failure = "url?e=<<ERROR>>"
+}
+
+hook {
+  baseUrl = "https://backend/hook"
+
+  authType = "basic"
+
+  basicAuth {
+    username = "user"
+    password = "pass"
+  }
+}
+
+tracer {
+  client = "off"
 }
