--- a/src/test/resources/dummyconf.conf
+++ b/src/test/resources/dummyconf.conf
@@ -1,4 +1,8 @@
-callback {
-  success: "success"
-  failure: "denied"
+oauth2 {
+  rootUrl = "ROOR_URL_DUMMY"
+  github {
+    clientId = "DUMMY_ID"
+    clientSecret = "DUMMY_SECRET"
+    scopes = "DUMMY_SCOPE"
+  }
 }
