--- a/src/test/resources/runtime.conf
+++ b/src/test/resources/runtime.conf
@@ -1,38 +1,23 @@
-databaseUrl = "TestDbUrl"
-
-rootUrl = "https://lvh.me:9443"
-
 oauth2 {
+  rootUrl = "https://lvh.me:9443"
+
   github {
-    clientId: "clientId"
-    clientSecret: "clientSecret"
-    scopes: "read:user"
+    clientId = "clientId"
+    clientSecret = "clientSecret"
+    scopes = "read:user"
   }
 
   google {
-    clientId: "clientId"
-    clientSecret: "clientSecret"
-    scopes: "openid,email,profile"
+    clientId = "clientId"
+    clientSecret = "clientSecret"
+    scopes = "openid,email,profile"
   }
 
   facebook {
-    clientId: "clientId"
-    clientSecret: "clientSecret"
-    scopes: "public_profile"
+    clientId = "clientId"
+    clientSecret = "clientSecret"
+    scopes = "public_profile"
   }
-}
-
-jwt {
-  expirationTime: "1d"
-  algorithm: "HS256"
-  secret: "secret"
-  privateKey: "private"
-  publicKey: "public"
-}
-
-callback {
-  success: "url?t=<<TOKEN>>"
-  failure: "url?e=<<ERROR>>"
 }
 
 ldap {
@@ -45,25 +30,18 @@ ldap {
   userSearchReturnArrayAttributes = "memberof"
 }
 
-hook {
-  baseUrl = "https://backend/hook"
-
-  authType = "basic"
-
-  basicAuth {
-    username = "user"
-    password = "pass"
+userpass {
+  passwordDifficulty {
+    pattern = "PATTERN"
   }
-}
-
-passwordDifficulty {
-  pattern: "PATTERN"
-}
-
-database {
-  type: "DBTYPE"
-}
-
-tracer {
-  client: "off"
+  email {
+    http {
+      serviceUrl = "URL"
+      serviceUsername = "USERNAME"
+      servicePassword = "SECRET"
+    }
+    rabbit-mq {
+      queue = "QUEUE"
+    }
+  }
 }
