add email service type config

--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -47,6 +47,9 @@ userpass {
   }
 
   email {
+    // http, rabbitmq
+    type = "http"
+
     http {
       serviceUrl = "http://localhost:9010"
       serviceUrl =  ${?EMAIL_SERVICE_URL}
