--- a/src/test/resources/runtime.conf
+++ b/src/test/resources/runtime.conf
@@ -35,6 +35,7 @@ userpass {
     pattern = "PATTERN"
   }
   email {
+    type = "TYPE"
     http {
       serviceUrl = "URL"
       serviceUsername = "USERNAME"
