refactor token handling

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -31,22 +31,66 @@ database {
 }
 
 jwt {
-  expirationTime = "1d"
-  expirationTime = ${?JWT_EXPIRATION_TIME}
-  // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
-  // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
-  algorithm = "HS256"
-  algorithm = ${?JWT_ALGORITHM}
-  secret = "secret"
-  secret = ${?JWT_SECRET}
-  privateKey = ""
-  privateKey = ${?JWT_PRIVATE_KEY}
-  publicKey = ""
-  publicKey = ${?JWT_PUBLIC_KEY}
+  shortTerm {
+    expirationTime = "1d"
+    expirationTime = ${?SHORT_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "HS256"
+    algorithm = ${?SHORT_JWT_ALGORITHM}
+    secret = "secret"
+    secret = ${?SHORT_JWT_SECRET}
+    privateKey = ""
+    privateKey = ${?SHORT_JWT_PRIVATE_KEY}
+    publicKey = ""
+    publicKey = ${?SHORT_JWT_PUBLIC_KEY}
+  }
+  longTerm {
+    expirationTime = "1d"
+    expirationTime = ${?LONG_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "HS256"
+    algorithm = ${?LONG_JWT_ALGORITHM}
+    secret = "secret_long"
+    secret = ${?LONG_JWT_SECRET}
+    privateKey = ""
+    privateKey = ${?LONG_JWT_PRIVATE_KEY}
+    publicKey = ""
+    publicKey = ${?LONG_JWT_PUBLIC_KEY}
+  }
+  emailProvider {
+    expirationTime = "30m"
+    expirationTime = ${?EMAIL_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "HS256"
+    algorithm = ${?EMAIL_JWT_ALGORITHM}
+    secret = "secret_email"
+    secret = ${?EMAIL_JWT_SECRET}
+    privateKey = ""
+    privateKey = ${?EMAIL_JWT_PRIVATE_KEY}
+    publicKey = ""
+    publicKey = ${?EMAIL_JWT_PUBLIC_KEY}
+  }
+  totpProvider {
+    expirationTime = "10m"
+    expirationTime = ${?TOTP_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "HS256"
+    algorithm = ${?TOTP_JWT_ALGORITHM}
+    secret = "secret_email"
+    secret = ${?TOTP_JWT_SECRET}
+    privateKey = ""
+    privateKey = ${?TOTP_JWT_PRIVATE_KEY}
+    publicKey = ""
+    publicKey = ${?TOTP_JWT_PUBLIC_KEY}
+  }
 }
 
 callback {
-  success = "https://lvh.me:9443/index.html?token=<<TOKEN>>"
+  success = "https://lvh.me:9443/index.html?token=<<TOKEN>>&refresh_token=<<REFRESH_TOKEN>>"
   failure = "https://lvh.me:9443/index.html?error=<<ERROR>>"
 }
 
