--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -16,15 +16,17 @@ database {
 }
 
 jwt {
-  expirationTime = "1d"
-  algorithm = "HS256"
-  secret = "secret"
-  privateKey = "private"
-  publicKey = "public"
+  example {
+    expirationTime = "1d"
+    algorithm = "HS256"
+    secret = "secret"
+    privateKey = "private"
+    publicKey = "public"
+  }
 }
 
 callback {
-  success = "url?t=<<TOKEN>>"
+  success = "url?t=<<TOKEN>>&rt=<<REFRESH_TOKEN>>"
   failure = "url?e=<<ERROR>>"
 }
 
