add refresh token endpoint

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,7 +32,7 @@ database {
 
 jwt {
   shortTerm {
-    expirationTime = "1d"
+    expirationTime = "1h"
     expirationTime = ${?SHORT_JWT_EXPIRATION_TIME}
     // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
     // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
